# titanium

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  Dockerfile  Pipfile  Privacy.md  README.md  Terms.md  atlas.hcl  debug-loader.py  example-config.cfg  example.py  main.py  pyproject.toml  renovate.json  self-host.md  test.py
.github/: dependabot.yml
.github/workflows/: pylint.yml  ruff.yml
cogs/admin/: admin.py  cogs.py
cogs/api/: api.py
cogs/automated/: analytics.py  bad_links.py  data_retention.py  mod_data.py  mod_watcher.py  scheduled_tasks.py  server_counters.py  server_counts.py  stats_update.py
cogs/automod/: automod.py  message_handler.py
cogs/basic/: basic.py  user.py
cogs/bouncer/: bouncer.py
cogs/commands/: basic.py  fun.py  game.py  help.py  music.py  quote.py  server.py  settings.py  user.py  utility.py
cogs/confessions/: confessions.py
cogs/fireboard/: fireboard.py
cogs/misc/: help.py  (+7 more)
commands/: admin_utils.py  animals.py  bot_utils.py  cog_utils.py  fireboard.py  images.py  leaderboard.py  misc.py  music.py  nix_check.py  reviews.py  server_utils.py  song-url.py  song_url.py  spotify.py  spotify_autoembed.py  status_update.py  user_utils.py  utils.py  web_search.py  welcome.py
content/: .gitignore
lib/: duration.py  hybrid_adapters.py  setup_logger.py  sql.py
migrations/: 20251004223030.sql  20251008204555.sql  20251008234439.sql  20251016205044.sql  20251029002821.sql  20251101233606.sql  20251103005820.sql  20251104232739.sql  20251107230558.sql  20251107232142.sql  20251113112836.sql  20251118013619.sql  20251119212757.sql  20251123014736.sql  20251123023530.sql  20251123213626.sql  20251126224412.sql  20251126230304.sql  20251129224250.sql  20251130011646.sql  20251204234345.sql  20251204235447.sql  20251206022938.sql  20251208022420.sql  20251211223436.sql  20251215232633.sql  20251216014325.sql  20251220214734.sql  20251221230731.sql  20251228162246.sql  20251230024407.sql  20251230025236.sql  20260205205950.sql  20260207024424.sql  20260220010704.sql  20260227010427.sql  20260303003038.sql  20260314005202.sql  20260322014104.sql  20260322015642.sql  (+10 more)
testing/: status_server.py
tests/: conftest.py  test_automod.py  test_bouncer.py  test_case_manager.py
utils/: escape_markdown.py  return_ctrlguild.py  songlink_exceptions.py  spotify_elements.py  truncate.py
v1_to_v2/: README.md  migrate.py
(+117 files in other folders)
