[project]
name = "titanium"
version = "0.1.0"
description = "Titanium Discord Bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.12.15",
    "asqlite==2.0.0",
    "colorthief==0.2.1",
    "discord-py==2.5.2",
    "pillow-avif-plugin==1.5.2",
    "pillow==11.3.0",
    "psutil==7.2.1",
    "py-cpuinfo==9.0.0",
    "pygit2==1.18.2",
    "spotipy==2.25.1",
    "thefuzz==0.22.1",
    "url-cleaner==0.1.5",
    "pilmoji",
    "wand>=0.6.13",
    "pytest-playwright>=0.7.0",
    "websockets>=15.0.1",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv.sources]
pilmoji = { git = "https://github.com/jay3332/pilmoji" }

[tool.basedpyright]
typeCheckingMode = "off"
